# RobotSwitch

./: .gitignore  LICENSE  README.md  franka_gohome.sh  franka_pose_init.sh
.catkin_tools/profiles/default/: devel_collisions.txt
src/franka_interactive_controllers/: CMakeLists.txt
src/franka_interactive_controllers/doc/: actions.csv  actions1.csv  draw2.m  (+11 more)
src/franka_reactive_controller/: CMakeLists.txt  franka_actor_controller_plugin.xml  franka_reactive_controller_plugin.xml  package.xml
src/franka_reactive_controller/config/: cartesian_velocity_controller_params.yaml  franka_reactive_controller.yaml
src/franka_reactive_controller/include/franka_cartesian_controller/: cartesian_pose_node_controller.h  cartesian_velocity_node_controller.h
src/franka_reactive_controller/launch/: cartesian_pose_controller.launch  cartesian_velocity_controller.launch  franka_bringup.launch  franka_gohome.launch  franka_interactive.launch  franka_stop_controller.launch  move_to_start.launch
src/franka_reactive_controller/scripts/: franka_gohome.sh  franka_gui_gripper_run.py
src/franka_reactive_controller/src/: cartesian_velocity_node_controller.cpp  examples_common.cpp  libfranka_joint_goal_motion_generator.cpp  libfranka_joint_motion_generator.cpp  libfranka_pose_motion_generator.cpp
src/franka_reactive_controller/src/franka_cartesian_controller/: cartesian_pose_node_controller.cpp  cartesian_velocity_node_controller.cpp
src/franka_reactive_controller/src/franka_motion_generator/: libfranka_joint_motion_generator.cpp
src/imu_cmd/: CMakeLists.txt  README.md  package.xml  wheeltec_udev.sh
src/robotswitch_controller/: CMakeLists.txt  README.md  package.xml  wheeltec_udev.sh
src/robotswitch_controller/config/: ahrs_init.yaml  handler_init.yaml  init.yaml
src/robotswitch_controller/data/: 10hz_act.csv  10hz_act1.csv  10hz_act2.csv  10hz_act_t3.csv  10hz_episode.csv  10hz_episode1.csv  10hz_episode2.csv  10hz_episode_niuyouguo.csv  10hz_episode_niuyouguo2.csv  10hz_eps.csv  10hz_obs.csv  10hz_obs1.csv  10hz_obs2.csv  10hz_obs_niuyouguo.csv  10hz_obs_niuyouguo2.csv  10hz_obs_t3.csv  50hz_act.csv  50hz_act1.csv  50hz_act2.csv  50hz_act_niuyouguo.csv  50hz_act_niuyouguo2.csv  50hz_act_t1.csv  50hz_act_t10.csv  50hz_act_t11.csv  50hz_act_t12.csv  50hz_act_t13.csv  50hz_act_t14.csv  50hz_act_t15.csv  50hz_act_t16.csv  50hz_act_t17.csv  50hz_act_t18.csv  50hz_act_t19.csv  50hz_act_t2.csv  50hz_act_t20.csv  50hz_act_t21.csv  50hz_act_t22.csv  50hz_act_t23.csv  50hz_act_t24.csv  50hz_act_t25.csv  50hz_act_t26.csv  (+140 more)
src/robotswitch_controller/data/10hz_data/: 10hz_act_niuyouguo.csv  10hz_act_niuyouguo2.csv  10hz_act_t1.csv  10hz_act_t10.csv  10hz_act_t11.csv  10hz_act_t12.csv  10hz_act_t13.csv  10hz_act_t14.csv  10hz_act_t15.csv  10hz_act_t16.csv  10hz_act_t17.csv  10hz_act_t18.csv  10hz_act_t19.csv  10hz_act_t2.csv  10hz_act_t20.csv  10hz_act_t21.csv  10hz_act_t22.csv  10hz_act_t23.csv  10hz_act_t24.csv  10hz_act_t25.csv  10hz_act_t26.csv  10hz_act_t27.csv  10hz_act_t28.csv  10hz_act_t29.csv  10hz_act_t3.csv  10hz_act_t30.csv  10hz_act_t31.csv  10hz_act_t32.csv  10hz_act_t33.csv  10hz_act_t34.csv  10hz_act_t35.csv  10hz_act_t36.csv  10hz_act_t37.csv  10hz_act_t38.csv  10hz_act_t39.csv  10hz_act_t4.csv  10hz_act_t40.csv  10hz_act_t41.csv  10hz_act_t42.csv  10hz_act_t43.csv  (+98 more)
src/robotswitch_controller/include/: ahrs_driver.h  autobot.h  eps.csv  serial_node.h
src/robotswitch_controller/include/ahrs/: ahrs_driver.h  imu_handler.h
src/robotswitch_controller/include/force_mcu/: force_mcu_control.h
src/robotswitch_controller/include/imu_mcu/: imu_mcu_control.h
src/robotswitch_controller/include/left_mcu/: left_mcu_control.h
src/robotswitch_controller/include/mcu_common/: common_data.h
src/robotswitch_controller/include/right_mcu/: right_mcu_control.h
src/robotswitch_controller/include/rs_common/: biquad_filter.h  common_data.h  math_utils.hpp  serial_node.h
src/robotswitch_controller/include/teleop_mcu/: teleop_mcu_control.h
src/robotswitch_controller/launch/: ahrs_imu_cmd.launch  all.launch  all_imu.launch  all_node_handler.launch  autocut.launch  center_handler.launch  controller.launch  eval.launch  force_mcu.launch  imu_handler.launch  imu_mcu.launch  left_mcu.launch  right_mcu.launch  robotserver.launch  show_tf.launch  teleop_mcu.launch  tf.launch
src/robotswitch_controller/scripts/: task_handler.py  zmq_center.py  zmq_test.py
src/robotswitch_controller/src/: ahrs_driver.cpp  autobot.cpp  center_pose_node.cpp  center_vel_node.cpp  controller_driver.cpp
src/robotswitch_controller/src/ahrs/: ahrs_driver.cpp  ahrs_driver_.cpp  crc_table.cpp  imu_handler.cpp  rs_tf.cpp  rs_tf_delta.cpp  rs_tf_test.cpp
src/robotswitch_controller/src/force_mcu/: force_mcu_control.cpp  force_mcu_serial_node.cpp
src/robotswitch_controller/src/imu_mcu/: imu_mcu_control.cpp  imu_mcu_serial_node.cpp
src/robotswitch_controller/src/left_mcu/: left_mcu_control.cpp  left_mcu_serial_node.cpp
src/robotswitch_controller/src/right_mcu/: right_mcu_control.cpp  right_mcu_serial_node.cpp
src/robotswitch_controller/src/rs_common/: biquad_filter.c  filter_math.c  math_utils.cpp
src/robotswitch_controller/src/teleop_mcu/: teleop_mcu_control.cpp  teleop_mcu_serial_node.cpp
src/robotswitch_controller/test/: RobotSwitch.m  Script.m  ahrs_data.txt  ahrs_dyn.txt  ahrs_dyn1.txt  ahrs_dyn2.txt  ahrs_dyn4.txt  ahrs_dyn5.txt  ahrs_dyn6.txt  ahrs_dyn_filterdelay.txt  ahrs_dyn_hpf.txt  ahrs_dyn_hpf2_0.1.txt  ahrs_dyn_hpf2_1.0.txt  ahrs_position.txt  ahrs_static.txt  ahrs_static1.txt  ahrs_static2.txt  ahrs_static3.txt  ahrs_static4.txt  ahrs_static6.txt  calibration.asv  calibration.m  compare.m  compare_cpp_matlab.asv  compare_cpp_matlab.m  cpp.asv  cpp.m  disint_velint.m  fft_test.asv  fft_test.m  fft_test.py  plot.py
src/robotswitch_controller/test/cpp_filter/: CppHighPassFilter.m  FIRFilter.asv  FIRFilter.m
src/robotswitch_controller/test/imu_intergration_library/: IntFcn.m  IntFcn2.m  IntFcn_Time.m  IntFcn_Time2.m  iomega.m
src/robotswitch_controller/test/ximu_matlab_library/: xIMUdataClass.m
(+27 files in other folders)
